--- a/b/bu/buf/buffiniandcompany.com.html
+++ b/b/bu/buf/buffiniandcompany.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the buffiniandcompany.com privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223064639id_/http%3A//www.buffiniandcompany.com/%28lax0on45gq1peg55syacec55%29/WebsitePrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the buffiniandcompany.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615113948id_/http%3A//www.buffiniandcompany.com/WebsitePrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>Buffini &amp; Company - PrivacyPolicy</title>
@@ -12,19 +12,19 @@
 	    </head>
 	<body>
 		<form name="Form1" method="post" action="WebsitePrivacyPolicy.aspx" id="Form1">
-<input type="hidden" name="__VIEWSTATE" value="dDwtNzQwMzUzMTM4O3Q8O2w8aTwxPjs+O2w8dDw7bDxpPDA+O2k8MT47PjtsPHQ8O2w8aTwxPjs+O2w8dDxwPHA8bDxWaXNpYmxlOz47bDxvPGY+Oz4+Oz47Oz47Pj47dDw7bDxpPDA+Oz47bDx0PHA8bDxfIUl0ZW1Db3VudDs+O2w8aTwwPjs+Pjs7Pjs+Pjs+Pjs+Pjs++bBw3zWAT5CALNNrKMUB1e/ysnc=">
+<input type="hidden" name="__VIEWSTATE" value="dDwxMjEwMDAxMDA7dDw7bDxpPDE+Oz47bDx0PDtsPGk8MT47aTw4Pjs+O2w8dDw7bDxpPDM+Oz47bDx0PHA8cDxsPFZpc2libGU7PjtsPG88Zj47Pj47Pjs7Pjs+Pjt0PDtsPGk8MD47PjtsPHQ8cDxsPF8hSXRlbUNvdW50Oz47bDxpPDA+Oz4+Ozs+Oz4+Oz4+Oz4+Oz70L2Pm6CVA6EGXoh+eE2EOsV9eXA==">
 
 		
 		
 <table width="775" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#172e81">
 	<tbody><tr>
-		<td width="214"><a href="/(teghxnetjdv2mvnmsxj1tef3)/default.aspx"><img src="/Images/ProvImages/Interface/BCoLogoHd.gif" alt="Buffini &amp; Company" width="214" height="78" border="0"></a></td>
+		<td width="214"><a href="/default.aspx"><img src="/Images/ProvImages/Interface/BCoLogoHd.gif" alt="Buffini &amp; Company" width="214" height="78" border="0"></a></td>
 		<td>
 			<table id="TopNavPublic_pnlUserLogin" cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td>
-	
+
 				<table cellspacing="0" cellpadding="5" border="0" align="right">
 					<tbody><tr>
-						<td class="txtWht" nowrap=""><img src="/Images/ProvImages/Interface/IconMemberLogin.gif" width="13" height="13" hspace="3" align="absMiddle"><a href="/(teghxnetjdv2mvnmsxj1tef3)/membergateway.aspx" class="txtLinkWht"><strong>MEMBER LOGIN</strong></a> | <a href="/(teghxnetjdv2mvnmsxj1tef3)/Help/default.aspx" class="txtLinkWht">Help</a></td>
+						<td class="txtWht" nowrap=""><img src="/Images/ProvImages/Interface/IconMemberLogin.gif" width="13" height="13" hspace="3" align="absMiddle"><a href="/membergateway.aspx" class="txtLinkWht"><strong>MEMBER LOGIN</strong></a> | <a href="/Help/default.aspx" class="txtLinkWht">Help</a></td>
 					</tr>
 				</tbody></table>
 			
@@ -38,19 +38,19 @@
 		<table width="775" border="0" cellpadding="0" cellspacing="0" bgcolor="#000000" align="center">
     	<tbody><tr><td bgcolor="#FFFFFF" colspan="15"><img src="/images/spacer.gif" width="1" height="1"></td></tr>
 		<tr>
-			<td nowrap="" class="TopNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/default.aspx'" onmouseover="this.className='TopNavon'" onmouseout="this.className='TopNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/default.aspx" class="txtNav">HOME</a></td>
+			<td nowrap="" class="TopNavoff" onclick="self.location='/default.aspx'" onmouseover="this.className='TopNavon'" onmouseout="this.className='TopNavoff'"><a href="/default.aspx" class="txtNav">HOME</a></td>
 			<td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="20"></td>
-			<td nowrap="" class="TopNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/Providence/Products/resources.aspx'" onmouseover="this.className='TopNavonCoaching'" onmouseout="this.className='TopNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/Providence/Products/resources.aspx" class="txtNav">WORKING BY REFERRAL</a></td>
+			<td nowrap="" class="TopNavoff" onclick="self.location='/Providence/Products/resources.aspx'" onmouseover="this.className='TopNavonCoaching'" onmouseout="this.className='TopNavoff'"><a href="/Providence/Products/resources.aspx" class="txtNav">WORKING BY REFERRAL</a></td>
 			<td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="1"></td>
-			<td nowrap="" class="TopNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/Providence/Products/default.aspx'" onmouseover="this.className='TopNavonCoaching'" onmouseout="this.className='TopNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/Providence/Products/default.aspx" class="txtNav">COACHING</a></td>
+			<td nowrap="" class="TopNavoff" onclick="self.location='/Providence/Products/default.aspx'" onmouseover="this.className='TopNavonCoaching'" onmouseout="this.className='TopNavoff'"><a href="/Providence/Products/default.aspx" class="txtNav">COACHING</a></td>
 			<td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="1"></td>
-			<td nowrap="" class="TopNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/providence/products/events/default.aspx'" onmouseover="this.className='TopNavonEvent'" onmouseout="this.className='TopNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/providence/products/events/default.aspx" class="txtNav">EVENTS</a></td>
+			<td nowrap="" class="TopNavoff" onclick="self.location='/providence/products/events/default.aspx'" onmouseover="this.className='TopNavonEvent'" onmouseout="this.className='TopNavoff'"><a href="/providence/products/events/default.aspx" class="txtNav">EVENTS</a></td>
 			<td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="1"></td>
-			<td nowrap="" class="TopNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/100days/100daysinfo.aspx'" onmouseover="this.className='TopNavonTraining'" onmouseout="this.className='TopNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/100days/100daysinfo.aspx" class="txtNav">TRAINING</a></td>
+			<td nowrap="" class="TopNavoff" onclick="self.location='/100days/100daysinfo.aspx'" onmouseover="this.className='TopNavonTraining'" onmouseout="this.className='TopNavoff'"><a href="/100days/100daysinfo.aspx" class="txtNav">TRAINING</a></td>
 			<td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="1"></td>
-			<td nowrap="" class="TopNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/Providence/about.aspx'" onmouseover="this.className='TopNavon'" onmouseout="this.className='TopNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/Providence/about.aspx" class="txtNav">COMPANY</a></td>
+			<td nowrap="" class="TopNavoff" onclick="self.location='/Providence/about.aspx'" onmouseover="this.className='TopNavon'" onmouseout="this.className='TopNavoff'"><a href="/Providence/about.aspx" class="txtNav">COMPANY</a></td>
 			<td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="1"></td>
-			<td nowrap="" class="TopNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/membergateway.aspx'" onmouseover="this.className='TopNavonMarketplace'" onmouseout="this.className='TopNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/membergateway.aspx" class="txtNav">MEMBERS AREA</a></td>
+			<td nowrap="" class="TopNavoff" onclick="self.location='/membergateway.aspx'" onmouseover="this.className='TopNavonMarketplace'" onmouseout="this.className='TopNavoff'"><a href="/membergateway.aspx" class="txtNav">MEMBERS AREA</a></td>
 			<td bgcolor="#000000"><img src="/images/spacer.gif" width="1" height="1"></td>
 			<td width="100%"><img src="/images/spacer.gif" width="1" height="1"></td>
     	</tr>
@@ -59,30 +59,14 @@
 <table width="775" border="0" cellspacing="0" cellpadding="0" align="center">
 	<tbody><tr>
 		<td width="175" align="center" valign="top" bgcolor="#C7DCF2"><table width="171" border="0" cellpadding="0" cellspacing="0">
-	<tbody><tr>
-		<td class="txtWht-10pad"><a href="/(teghxnetjdv2mvnmsxj1tef3)/Providence/about.aspx"><span class="LftNavTtl">COMPANY</span></a></td>
-	</tr>
-	<tr>
-		<td bgcolor="#7F9DB9"><img src="/images/spacer.gif" width="1" height="1"></td>
-	</tr>
+	<tbody><tr><td class="txtWht-10pad"><a href="/WebsitePrivacyPolicy.aspx"><span class="LftNavTtl">COMPANY POLICIES</span></a></td></tr>
+	<tr><td bgcolor="#7F9DB9"><img src="/images/spacer.gif" width="1" height="1"></td></tr>
 </tbody></table>
 
 <table width="171" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" border="0">
-	<tbody><tr>
-		<td class="LftNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/Providence/submit_referral.aspx'" onmouseover="this.className='LftNavon'" onmouseout="this.className='LftNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/Providence/submit_referral.aspx" class="txtLink">Submit Referral</a></td>
-	</tr>
-	<tr>
-		<td colspan="2" background="/Images/ProvImages/Interface/btm-gry-dots-800.gif"><img src="/Images/ProvImages/Interface/px_clear.gif" width="1" height="1"></td>
-	</tr>
-	<tr>
-		<td class="LftNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/WebsitePrivacyPolicy.aspx'" onmouseover="this.className='LftNavon'" onmouseout="this.className='LftNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/WebsitePrivacyPolicy.aspx" class="txtLink">Privacy Policy</a></td>
-	</tr>
-	<tr>
-		<td background="/Images/ProvImages/Interface/btm-gry-dots-800.gif"><img src="/Images/ProvImages/Interface/px_clear.gif" width="1" height="1"></td>
-	</tr>
-	<tr>
-		<td class="LftNavoff" onclick="self.location='/(teghxnetjdv2mvnmsxj1tef3)/Help/default.aspx'" onmouseover="this.className='LftNavon'" onmouseout="this.className='LftNavoff'"><a href="/(teghxnetjdv2mvnmsxj1tef3)/Help/default.aspx" class="txtLink">Help</a></td>
-	</tr>
+	<tbody><tr><td class="LftNavoff" onclick="self.location='/WebsitePrivacyPolicy.aspx'" onmouseover="this.className='LftNavon'" onmouseout="this.className='LftNavoff'"><a href="/WebsitePrivacyPolicy.aspx" class="txtLink">Privacy Policy</a></td></tr>
+	<tr><td bgcolor="#C7DCF2"><img src="/Images/spacer.gif" width="1" height="1"></td></tr>
+	<tr><td class="LftNavoff" onclick="self.location='/RefundPolicy.aspx'" onmouseover="this.className='LftNavon'" onmouseout="this.className='LftNavoff'"><a href="/RefundPolicy.aspx" class="txtLink">Refund Policy</a></td></tr>
 </tbody></table>
 <!-- Start Testimonial -->
 <br><br>
@@ -167,16 +151,22 @@
 </tbody></table>
 <table width="775" border="0" cellpadding="3" cellspacing="0" align="center">
 	<tbody><tr>
-		<td nowrap="" class="footer_text">Copyright © 2005 Buffini &amp; Company, ALL RIGHTS RESERVED.</td>
+		<td nowrap="" class="footer_text">Copyright © 2006 Buffini &amp; Company, ALL RIGHTS RESERVED.</td>
 	</tr>
 	<tr>
 		<td valign="top" nowrap="" class="txtNorm">
-		<a href="/(teghxnetjdv2mvnmsxj1tef3)/Providence/submit_referral.aspx" class="footer_copyright">Submit Referral</a>  | 
-		<a href="/(teghxnetjdv2mvnmsxj1tef3)/WebsitePrivacyPolicy.aspx" class="footer_copyright">Privacy Policy</a> | 
-		<a href="/(teghxnetjdv2mvnmsxj1tef3)/Help/default.aspx" class="footer_copyright">Help</a>
+		<a href="/Providence/submit_referral.aspx" class="footer_copyright">Submit Referral</a>  | 
+		<a href="/WebsitePrivacyPolicy.aspx" class="footer_copyright">Company Policies</a> | 
+		<a href="/Help/default.aspx" class="footer_copyright">Help</a>
 		</td>
 	</tr>
 </tbody></table>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-411836-1";
+urchinTracker();
+</script>
         </form>
 	
 
