--- a/r/ra/rat/ratedesi.com.html
+++ b/r/ra/rat/ratedesi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ratedesi.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217223751id_/http%3A//www.ratedesi.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ratedesi.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615125821id_/http%3A//www.ratedesi.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0
 	Transitional//EN" "DTD/xhtml1-transitional.dtd"><html><head>
@@ -229,9 +229,52 @@ background: url("http://www.ratedesi.com/images/gray_top_middle.gif") repeat-x;
 .gray_bottom_middle {
 	background: url("http://www.ratedesi.com/images/gray_bottom_middle.gif") repeat-x;
 }
-</style></head>
-<body bgcolor="#9098A7">
+</style><style type="text/css">
+#b-navbar 
+  {
+  width:100%;
+  padding-bottom:1px;
+  font-family: "Trebuchet MS",Verdana,Arial,Sans-serif;
+  font-size: 13px;
+  margin-bottom:5px;
+  position:absolute !important;
+  top:0;
+  left:0;
+  z-index:1;
+  display:block !important;
+  background:#000000;
+  border-bottom:1px solid #FFFFFF;
+  color:#F33366;
+  }
+#b-navbar a
+  {
+	text-decoration: underline;
+	color:#FFFFFF;
+	position:relative;
+	top:-1px
+  }
+#b-navbar a:hover
+  {
+	text-decoration: underline;
+	color:#FFFFFF;
+	background-color: #333366;
+  }
+#b-intro
+  {
+	display:inline !important;
+	font-weight: bold;
+  }
 
+#b-spacer
+  {
+	display:inline !important;
+	color:#AAAAAA;
+	font-weight: bold;
+  }
+</style></head>
+
+
+<body bgcolor="#9098A7"><div id="b-navbar"><div id="b-intro">&nbsp;The RD Network:</div>&nbsp;<a href="http://www.ratedesi.com" target="_new">RateDesi.com</a>&nbsp;<div id="b-spacer">|</div> <a href="http://forums.ratedesi.com" target="_new">RateDesi Forums</a>&nbsp;<div id="b-spacer">|</div> <a href="http://www.ratehispanic.com" target="_new">RateHispanic.com</a> <div id="b-spacer">|</div> <a href="http://desivideos.ratedesiblogs.com" target="_new">Desi Video Blog</a> ... with much more very soon.</div><div style="height: 20px;"></div>
 
 <table border="0" cellpadding="0" cellspacing="0" width="856" align="left">
 <tbody><tr width="856">
@@ -253,38 +296,6 @@ background: url("http://www.ratedesi.com/images/gray_top_middle.gif") repeat-x;
  Sub-category: Undefined
 -->
 <script language="JavaScript" src="http://ads.realtechnetwork.net/servlet/ajrotator/1061/0/viewJScript?zone=realtech&amp;dim=282&amp;pos=1"></script> <noscript><a href="http://ads.realtechnetwork.net/servlet/ajrotator/1061/0/clickCGI?zone=realtech&pos=1"><img src="http://ads.realtechnetwork.net/servlet/ajrotator/1061/0/viewCGI?zone=realtech&dim=282&pos=1" width="468" height="60" border="0"></a></noscript></td>
-</tr>
-</tbody></table></td>
-		</tr>
-		</tbody></table>
-	</td>
-	</tr>
-	</tbody></table>
-</td>
-</tr>
-</tbody></table><table cellpadding="2" cellspacing="0" border="0" colspan="2">
-<tbody><tr colspan="2">
-<td colspan="2">
-	<table border="0" cellspacing="0" cellpadding="0" colspan="2" bordercolor="black">
-	<tbody><tr colspan="2">
-	<td bgcolor="#111111" colspan="2">
-		<table bordercolor="black" cellpadding="2" cellspacing="1" width="100%" style="border-style:solid; border-width:1px">			
-		<tbody><tr colspan="2">
-		<td bgcolor="#B7BCC6" colspan="2"><table width="844"><tbody><tr>
-<td align="center"><script type="text/javascript"><!--
-google_ad_client = "pub-1618096194101329";
-google_ad_width = 728;
-google_ad_height = 15;
-google_ad_format = "728x15_0ads_al_s";
-google_ad_channel ="5859325378";
-google_color_border = "B7BCC6";
-google_color_bg = "B7BCC6";
-google_color_link = "000000";
-google_color_url = "FFFFFF";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></td>
 </tr>
 </tbody></table></td>
 		</tr>
@@ -383,6 +394,8 @@ google_color_text = "000000";
 <input type="hidden" name="start" value="0">
 <input type="hidden" name="numresults" value="-1">
 <input type="hidden" name="maxmiles" value="-1">
+<input type="hidden" name="photos" value="1">
+<input type="hidden" name="sort" value="average_rating">
 
 
 <input type="submit" name="searchsubmit" value=" Search ">
@@ -412,7 +425,7 @@ google_color_text = "000000";
 			<td width="100%" bgcolor="#AFB8C9" class="title">.: Good Stuff :.</td>
 		</tr>
 		<tr>
-			<td width="100%" bgcolor="#B7BCC6"><font face="verdana"><b><br></b><center><b><a href="http://www.ratedesi.com/newgallerypics.php">Latest Uploaded Gallery Pics</a><p>Users Online (<a href="http://www.ratedesi.com/usersonline.php?ut=1">Females</a> | <a href="http://www.ratedesi.com/usersonline.php?ut=2">Males</a>)<br></p><p><a href="http://forums.ratedesi.com">The Forums</a> (RD account works there)</p><p><a href="http://www.ratedesi.com/signup.php">Register for RD</a></p><p><a href="http://www.ratedesi.com/search.php">Member Search</a></p></b><p><b><a href="http://www.ratedesi.com/topcountry.php">Top Rated Members by Country</a></b></p></center><br></font></td>
+			<td width="100%" bgcolor="#B7BCC6"><font face="verdana"><b><br></b><center><b><a href="http://www.ratedesi.com/newgallerypics.php">Latest Uploaded Gallery Pics</a><p>Users Online (<a href="http://www.ratedesi.com/usersonline.php?ut=1">Females</a> | <a href="http://www.ratedesi.com/usersonline.php?ut=2">Males</a>)<br></p><p><a href="http://forums.ratedesi.com">The Forums</a> (RD account works there)</p><p><a href="http://www.ratedesi.com/signup.php">Register for RD</a></p><p><a href="http://www.ratedesi.com/search.php">Member Search</a></p></b><p><b><a href="http://www.ratedesi.com/mostviewed.php">Most Viewed Profiles</a></b></p></center><br></font></td>
 		</tr>
 		</tbody></table>
 		</td>
@@ -505,8 +518,40 @@ google_color_text = "000000";
 	</tbody></table>
 	</td>
 </tr>
+</tbody></table></td></tr><tr>
+<td valign="top"><table cellpadding="2" cellspacing="0" border="0" width="100%">
+<tbody><tr>
+	<td>
+	<table border="0" cellspacing="0" width="100%" cellpadding="0">
+	<tbody><tr>
+		<td width="100%" bgcolor="#111111">
+		<table bordercolor="black" cellpadding="2" cellspacing="1" width="100%" style="border-style:solid; border-width:1px">
+		<tbody><tr>
+			<td width="100%" bgcolor="#B7BCC6"><script type="text/javascript"><!--
+google_ad_client = "pub-1618096194101329";
+google_ad_width = 120;
+google_ad_height = 90;
+google_ad_format = "120x90_0ads_al";
+google_ad_channel ="0376654447";
+google_color_border = "B7BCC6";
+google_color_bg = "B7BCC6";
+google_color_link = "000000";
+google_color_url = "0000FF";
+google_color_text = "0000FF";
+google_hints = "desi, indian";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></td>
+		</tr>
+		</tbody></table>
+		</td>
+	</tr>
+	</tbody></table>
+	</td>
+</tr>
 </tbody></table></td>
 </tr>
+
 <tr>
 <td valign="top"></td>
 </tr>
@@ -585,24 +630,25 @@ the URL of sites you visit,
 
 
 <table border="0" cellspacing="0" cellpadding="2" width="120" align="left" valign="top">
-<tbody><tr><td valign="top"><!-- Tag for size 120 x 600 for site ROS: Run-of-site - DO NOT MODIFY -->
-<script type="text/javascript" src="http://content.yieldmanager.com/rmtag2.js"></script>
-<script language="JavaScript">
-var rm_host = "http://adserving.budsinc.com";
-var rm_section_id = 10823;
-var rm_iframe_tags = 1;
-
-rmShowAd("120x600");
-</script>
-<!-- End of tag --></td></tr>
+<tbody><tr><td valign="top"><script type="text/javascript"><!--
+google_ad_client = "pub-1618096194101329";
+google_ad_width = 120;
+google_ad_height = 600;
+google_ad_format = "120x600_as";
+google_ad_type = "text_image";
+google_ad_channel ="1857229025";
+google_alternate_ad_url = "http://www.ratedesi.com/googlealternatesky.html";
+google_color_border = "9098A7";
+google_color_bg = "9098A7";
+google_color_link = "000000";
+google_color_url = "0000FF";
+google_color_text = "000000";
+google_hints = "desi, indian, india";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></td></tr>
 <tr><td>
-<a href="http://www.desiwear.com" target="_blank"><img src="/images/other/desiwear120/120x180_7.gif" width="120" border="0"></a>
-</td></tr>
-<tr><td>
-<a href="http://www.kalikicks.com" target="_blank"><img src="/images/other/kalikicks.jpg" width="120" border="0"></a>
-</td></tr>
-<tr><td>
-<a href="http://forums.ratedesi.com"><img src="http://www.ratedesi.com/images/other/forum6.jpg" width="120" border="0"></a>
+<a href="http://forums.ratedesi.com"><img src="http://www.ratedesi.com/images/other/forum3.jpg" width="120" border="0"></a>
 </td></tr>
 </tbody></table>
 
