--- a/r/re/red/redroof.com.html
+++ b/r/re/red/redroof.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the redroof.com privacy policy that was archived on 2005-11-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051123204322id_/http%3A//www.redroof.com/about_the_roof/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the redroof.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615125944id_/http%3A//www.redroof.com/about_the_roof/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>Red Roof Inns | Privacy Protection Policy</title>
@@ -34,7 +34,7 @@
     <td height="108"><a href="/promotions/hot_deals/index.asp"><img src="/images/rhd_savings.gif" alt="Red Hot Deals" width="127" height="127" border="0"></a></td>
   </tr>
   <tr>
-    <td height="108"><a href="/Promotions/Redicard/index.asp"><img src="/images/promo_redicard.gif" alt="RediCard Preferred Member" width="127" height="108" border="0"></a></td>
+    <td height="108"><a href="/Promotions/Redicard/index.asp"><img src="/images/promo_redicard.gif" alt="RediCard® Preferred Member" width="127" height="108" border="0"></a></td>
   </tr>
   <tr>					
     <td height="108"><a href="http://www.accorhotels.com/accorhotels/index.html" target="new"><img src="/images/promo_accor.gif" alt="Accorhotels.com" width="127" height="108" border="0"></a></td>
@@ -71,7 +71,7 @@
 		</p><div class="subtitle">What we will and will not do with Guest Information:</div><br> 
 	    1.	We will not sell, trade or rent Guest Information to parties outside the Accor family of companies, our franchisees and affiliates, or allow our affiliates to sell such information to parties outside of our group of companies, franchisees and affiliates.
 		<br><br>2.	We may use Guest Information to offer goods and services we believe may be of interest to you on behalf of ourselves, our affiliates and our franchisees.  We may use Guest Information to contact you to inquire or survey about the guest experience at the location(s) visited and the prospect of future stays or improvements needed to attract additional business.  We may also create and use aggregate Guest Information that is not personally identifiable to understand more about the common traits and interests of our Guests.
-		<br><br>3.  We may utilize one or more third-party service providers to send email or other communications to you on our behalf. These service providers are prohibited from using your email address or other contact information for any purpose other than to send communications on our behalf.
+		<br><br>3.  We may utilize one or more third-party service providers to send email or other communications to you on our behalf, including guest satisfaction survey.  These service providers are prohibited from using your email address or other contact information for any purpose other than to send communications on our behalf.
 		<p>
 		</p><div class="subtitle">Emails about Special Offers and Promotions and Opt-Out</div> <br>
 		It is our intention to only send email communications that would be useful to you and that you want to receive. If you provide us with your email address in connection with making a reservation or other communications with us, we may then contact you from time to time via email to provide information about special offers and promotions, or with information about ourselves and our products and services, that we believe may be of interest to you.  Each time you receive such an email from us, you will be provided the choice to "opt-out" of receiving future emails by following the instructions provided in the email.
@@ -99,7 +99,7 @@
 		All contents of this website are protected by United States and International Copyright and Trademark law.  Any unauthorized use is strictly prohibited and may subject a violator to civil and criminal penalties.  All rights reserved.
 		<p>
 		</p><div class="subtitle">Privacy Protection Policy Changes</div> <br>
-		In the future, we may need to change this Policy.  All changes will be included on this web site so that you will always know what information we gather, how we might use that information and whether we will disclose it to anyone.  This Policy was last updated on September 20, 2005.
+		In the future, we may need to change this Policy.  All changes will be included on this web site so that you will always know what information we gather, how we might use that information and whether we will disclose it to anyone.  This Policy was last updated on December 20, 2005.
 		</div><br><br>
 		</td>
 	</tr>
@@ -115,14 +115,16 @@
 	<tbody><tr>
 		<td width="100%" align="center" bgcolor="#000000" colspan="2">
 		<div class="footnav">
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="/about_the_roof/index.asp" title="About Red Roof Inn">About Red Roof Inn</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="/reservations/index.asp" title="Hotel Rates and Hotel Reservations">Reservations</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="/promotions/hot_deals/index.asp" title="Red Hot Deals">Red Hot Deals</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="/guest_relations/contact_us.asp" title="Red Roof Inn Hotel Accommodations">Contact Us</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="/Promotions/index.asp" title="Hotel Discount travel Promotions">Promotions</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="/about_the_roof/employment/index.asp" title="Red Roof Inn Career Opportunities">Careers</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="/about_the_roof/privacy.asp" title="Accor Privacy Protection Policy">Privacy</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="/index.asp" title="Red Roof Inn">Home</a></div>
+		&nbsp;&nbsp;<a href="/about_the_roof/index.asp" title="About Red Roof Inn">About Red Roof Inn</a>
+		&nbsp;&nbsp;&nbsp;<a href="/reservations/index.asp" title="Hotel Rates and Hotel Reservations">Reservations</a>
+		&nbsp;&nbsp;&nbsp;<a href="/promotions/hot_deals/index.asp" title="Red Hot Deals">Red Hot Deals</a>
+		&nbsp;&nbsp;&nbsp;<a href="/guest_relations/contact_us.asp" title="Red Roof Inn Hotel Accommodations">Contact Us</a>
+		&nbsp;&nbsp;&nbsp;<a href="/Promotions/index.asp" title="Hotel Discount travel Promotions">Promotions</a>
+		&nbsp;&nbsp;&nbsp;<a href="/about_the_roof/employment/index.asp" title="Red Roof Inn Career Opportunities">Careers</a>
+		&nbsp;&nbsp;&nbsp;<a href="/about_the_roof/privacy.asp" title="Accor Privacy Protection Policy">Privacy</a>
+		&nbsp;&nbsp;&nbsp;<a href="/reservations/reservation_policies.asp#question23" title="Red Roof Inn Accessible Rooms">Accessible Rooms</a>
+		&nbsp;&nbsp;&nbsp;<a href="/index.asp" title="Red Roof Inn">Home</a></div>
+		
 		</td>
 	</tr>
 	<tr>
@@ -136,7 +138,45 @@
 		</td>
 	</tr>
 	<tr>
-		<td width="100%" align="center"><div class="smalltext">© 2002, 2003, 2004, 2005 Accor Economy Lodging, Inc. All rights reserved</div></td>
+		<td width="100%" align="center">
+		<div class="smalltext">©&nbsp; 
+
+
+
+	
+			2002,
+		
+
+	
+			&nbsp;2003,
+		
+
+	
+			&nbsp;2004,
+		
+
+	
+			&nbsp;2005,
+		
+
+	
+			&nbsp;2006,
+		
+
+	
+
+	
+
+	
+
+	
+
+	
+
+	
+
+		&nbsp;Accor Economy Lodging, Inc. All rights reserved</div>
+		</td>
 	</tr>
 </tbody></table>
 <!-- START OF SmartSource Data Collector TAG -->
@@ -152,9 +192,10 @@
 <script language="Javascript1.5"><!--gVersion="1.5";//--></script>
 <script type="text/javascript" src="/includes/DCS.js"></script>
 <noscript>
-<!-- Test -->
+<!-- Development
 <IMG BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://www.accornasdc.com/dcswsj4xjiv0vcbom6i5tdv3z_7t9s/njs.gif?dcsuri=/nojavascript&WT.js=No">
-<!-- Production<IMG BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://www.accornasdc.com/dcshskapy00000w8422veen8c_5g2d/njs.gif?dcsuri=/nojavascript&WT.js=No"> -->
+-->
+<!-- Production --><IMG BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://www.accornasdc.com/dcshskapy00000w8422veen8c_5g2d/njs.gif?dcsuri=/nojavascript&WT.js=No">
 </noscript>
 <!-- END OF Data Collection Server TAG --></td>
 	</tr>
