--- a/m/ma/mae/maemo.org.html
+++ b/m/ma/mae/maemo.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the maemo.org privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231134339id_/http%3A//maemo.org/legal/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the maemo.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615132854id_/http%3A//maemo.org/legal/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html style="font-size: 16px;"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -34,7 +34,7 @@
     |start Project Logo
     +-->
 <div class="projectlogoA1">
-<a href="/"><img class="logoImage" alt="maemo" src="../images/maemologo_ks_80.png" title="maemo open source developer platform"></a>
+<a href="/"><img class="logoImage" alt="maemo" src="../images/maemo-2.0.png" title="maemo open source developer platform"></a>
 </div>
 <!--+
     |end Project Logo
@@ -58,6 +58,12 @@
 <li>
 <a class="base-not-selected" href="http://planet.maemo.org/">Planet</a>
 </li>
+<li>
+<a class="base-not-selected" href="https://garage.maemo.org/">Garage</a>
+</li>
+<li>
+<a class="base-not-selected" href="../apps/apps_maemo_2_0.html">Applications</a>
+</li>
 </ul>
 <!--+
     |end Tabs
@@ -75,7 +81,7 @@
     +-->
 <script type="text/javascript" language="JavaScript"><!--
               document.write("Published: " + document.lastModified);
-              //  --></script>Published: 01/30/2020 02:26:29
+              //  --></script>Published: 01/30/2020 02:26:31
 </div>
 <!--+
     |breadtrail
@@ -94,22 +100,25 @@
 <div onclick="SwitchMenu('menu_1.1', '../skin/')" id="menu_1.1Title" class="menutitle">Home</div>
 <div id="menu_1.1" class="menuitemgroup">
 <div class="menuitem">
-<a title="" href="../index.html">Frontpage</a>
+<a title="" href="../index.html">News</a>
 </div>
 <div class="menuitem">
-<a title="" href="../about.html">About</a>
+<a title="" href="../platform/docs/roadmap.html">Roadmap</a>
 </div>
 <div class="menuitem">
 <a title="" href="../screenshots.html">Screenshots</a>
 </div>
 <div class="menuitem">
-<a title="" href="../platform/docs/roadmap.html">Roadmap</a>
+<a title="" href="../presentations/presentations.html">Presentations</a>
 </div>
 <div class="menuitem">
 <a title="" href="../faq/faq.html">FAQ</a>
 </div>
 <div class="menuitem">
 <a title="" href="../legal/license.html">License</a>
+</div>
+<div class="menuitem">
+<a title="" href="../about.html">About</a>
 </div>
 <div class="menuitem">
 <a title="" href="../links/links.html">Links</a>
@@ -129,6 +138,25 @@
     |start content
     +-->
 <div id="content">
+<script language="Javascript" type="text/javascript">
+function printit() {
+  if (window.print) {
+    window.focus();
+    window.print();
+  }
+}
+        </script><script language="Javascript" type="text/javascript">
+var NS = (navigator.appName == "Netscape");
+var VERSION = parseInt(navigator.appVersion);
+if (VERSION > 3) {
+  document.write('<div title="Print this Page" class="printlink">');
+  document.write('  <a class="dida" href="javascript:printit()">');
+  document.write('    <img alt="print - icon" src="../skin/images/printer.gif" class="skin">');
+  document.write('    <br>');
+  document.write('  PRINT</a>');
+  document.write('</div>');
+}
+        </script><div title="Print this Page" class="printlink">  <a class="dida" href="javascript:printit()">    <img alt="print - icon" src="../skin/images/printer.gif" class="skin">    <br>  PRINT</a></div>
 <div id="skinconf-txtlink"></div>
 <div title="Portable Document Format" class="pdflink">
 <a class="dida" href="privacy_policy.pdf"><img alt="PDF -icon" src="../skin/images/pdfdoc.gif" class="skin"><br>
@@ -331,10 +359,10 @@ Site shall constitute your consent to such changes.
 <div class="lastmodified">
 <script type="text/javascript"><!--
 document.write("Last Published: " + document.lastModified);
-//  --></script>Last Published: 01/30/2020 02:26:29
+//  --></script>Last Published: 01/30/2020 02:26:31
 </div>
             Copyright © 
-	    2002-2005
+	    2002-2006
 	    &nbsp;
             Nokia Corporation<a href="/legal/termsofuse.html">
 	      Terms of use
