--- a/c/cs/csx/csx.com.html
+++ b/c/cs/csx/csx.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the csx.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228124735id_/http%3A//www.csx.com/%3Ffuseaction%3Dhome.privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the csx.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615140238id_/http%3A//www.csx.com/%3Ffuseaction%3Dhome.privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
 	<title>Welcome to CSX.com - Privacy Policy</title>
@@ -14,40 +14,38 @@
 	<td class="headerBOX">
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
-		<td style="padding-left: 25px;" nowrap=""><a href="/"><img src="images/csx-logo.gif" alt="" width="174" height="39" border="0"></a></td>
-		<td width="1%"><img src="images/spacer.gif" alt="" width="1" height="70" border="0"></td>
+		<td style="padding-left: 25px;" valign="bottom" nowrap=""><a href="/"><img src="images/csx-logo.gif" alt="" width="174" height="39" border="0"></a></td>
+		<td width="1%"><img src="images/spacer.gif" alt="" width="1" height="30" border="0"></td>
 		<td align="center">
 		
 		</td>
 		<td align="right">
 		<table border="0" cellspacing="0" cellpadding="0">
+		<tbody><tr>
+			<td colspan="2" align="left" style="padding-top: 5px; padding-bottom: 7px;">
+			<table border="0" cellspacing="0" cellpadding="0" align="left">
+			<tbody><tr>
+				<td nowrap="" class="quicklink" style="padding-right: 22px;"><a href="?fuseaction=home.main" class="none"><b>HOME</b></a></td>
+				<td nowrap="" class="quicklink" style="padding-right: 22px;"><a href="?fuseaction=careers.main" class="none"><b>CAREERS</b></a></td>
+				<td nowrap="" class="quicklink" style="padding-right: 22px;"><a href="?fuseaction=general.contact" class="none"><b>CONTACT US</b></a></td>
+				<td nowrap="" class="quicklink"><a href="?fuseaction=home.help" class="none"><b>HELP</b></a></td>
+			</tr>
+			</tbody></table>
+			</td>
+		</tr>
 		
 		<form action="?fuseaction=home.search" method="post" name="frmSEARCH" id="frmSEARCH"></form>
-		<tbody><tr>
-			<td><input type="text" name="keywords" value="" size="24"></td>
-			<td style="padding-left: 7px;"><input type="image" src="images/btn_search.gif"></td>
+		<tr>
+			<td><input type="text" name="keywords" value="" size="30"></td>
+			<td style="padding-left: 7px; padding-right: 28px;"><input type="image" src="images/btn_search.gif"></td>
 		</tr>
 		
 		
-		<tr>
-			<td class="size7" align="right" valign="top"></td>
-			<td>&nbsp;</td>
-		</tr>
 		</tbody></table>
 		</td>
-		<td width="1%" style="padding-left: 5px; padding-right: 25px; padding-top: 5px;" nowrap="" valign="top">
-		<table border="0" cellspacing="3" cellpadding="0">
-		<tbody><tr>
-			<td class="quicklink"><a href="?fuseaction=general.contact" class="none">CONTACT</a></td>
-		</tr>
-		<tr>
-			<td class="quicklink"><a href="?fuseaction=home.sitemap" class="none">SITE MAP</a></td>
-		</tr>
-		<tr>
-			<td class="quicklink"><a href="?fuseaction=home.help" class="none">HELP</a></td>
-		</tr>
-		</tbody></table>
-		</td>
+	</tr>
+	<tr>
+		<td colspan="5" valign="top"><div align="right" style="padding-left: 380px; padding-right: 28px; padding-top: 10px; padding-bottom: 3px; color: White;">To report an emergency, call 1-800-232-0144</div></td>
 	</tr>
 	</tbody></table>
 	</td>
@@ -122,7 +120,7 @@ We do not send unsolicited e-mail. After you provide us with personal informatio
 You may easily unsubscribe to future e-mailings by using any of the following methods:<ul class="lessPaddingMOZ"><li>Via our web site, by visiting the <a href="?fuseaction=media.news" target="_blank">Unsubscribe Page</a>.</li></ul>CSX Corp.'s web site may contain links to other sites, such as government organizations and affiliates. While we try to link only to sites that share our high standards and respect for privacy, we are not responsible for other sites' content or privacy practices.<br>
 <br>
 CSX Corp. has certified to the United States Department of Commerce that, for personal data transferred from the European Union to the United States, it will apply the Safe Harbor Principles. The Safe Harbor Principles ensure that: <ul class="lessPaddingMOZ"><li>Notice is given about the purposes for which information is collected;</li><li>Choice is offered to individuals to decide whether personal information should be disclosed either to a third party or for a purpose other than that for which it was originally collected;</li><li>Onward transfer occurs only after CSX Corp. has determined that a third party receiving the information provides at least the same level of privacy protection as is required by the Safe Harbor Principles;</li><li>Security is provided to protect personal information from loss, misuse, unauthorized access, disclosure, alteration and destruction;</li><li>Data integrity is maintained by making certain that collected data is relevant for the purposes for which it is used, and that it is accurate, complete and current;</li><li>Access to their personal information is given to individuals so they may correct, amend, or delete information where it is inaccurate; and<br>
-</li><li>Enforcement of the Safe Harbor Principles is carried out.</li></ul> </div>
+</li><li>Enforcement of the Safe Harbor Principles is carried out.</li></ul></div>
 
 		
 
